--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MobileSoftware</string>
+    <string name="login">Login</string>
+    <string name="signUp">Sign up</string>
+    <string name="logFailed">Login Failed</string>
 </resources>
