--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
-    <string name="app_name">MobileSoftware</string>
+    <string name="app_name">런투</string>
     <string name="login">로그인</string>
     <string name="signUp">회원가입</string>
     <string name="logFailed">로그인 실패</string>
