--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="open">oepned</string>
     <string name="close">closed</string>
     <string name="community">Community</string>
+    <string name="nav1">Edit profile</string>
+    <string name="nav2">Setting</string>
+    <string name="nav3">Logout</string>
 </resources>
