사용자 정보 관리

--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -8,6 +8,7 @@
     <string name="logEmail">\t\t\t이메일</string>
     <string name="logPass">\t\t\t비밀번호</string>
     <string name="signNickname">닉네임</string>
+    <string name="addProfile">프로필 사진</string>
     <string name="signEmail">이메일</string>
     <string name="signPass">비밀번호 6자 이상</string>
     <string name="signConfirm">비밀번호 확인</string>
@@ -15,6 +16,8 @@
     <string name="signBack">뒤로</string>
     <string name="open">oepned</string>
     <string name="close">closed</string>
+    <string name="edit">수정</string>
+    <string name="editPass">비밀번호 변경</string>
     <string name="community">커뮤니티</string>
     <string name="nav1">프로필 변경</string>
     <string name="nav2">설정</string>
