--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -14,7 +14,10 @@
     <string name="signConfirm">비밀번호 확인</string>
     <string name="createAccount">가입</string>
     <string name="signBack">뒤로</string>
-    <string name="open">oepned</string>
+    <string name="cancel">취소</string>
+    <string name="save">저장</string>
+    <string name="recordhint">내용을 작성해주세요</string>
+    <string name="open">opened</string>
     <string name="close">closed</string>
     <string name="edit">수정</string>
     <string name="editPass">비밀번호 변경</string>
