--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="nav1">Edit profile</string>
     <string name="nav2">Setting</string>
     <string name="nav3">Logout</string>
+    <string name="write">Post</string>
+    <string name="title">Title</string>
+    <string name="content">Content</string>
 </resources>
