--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <resources>
     <string name="app_name">런투</string>
     <string name="login">로그인</string>
@@ -25,4 +24,7 @@
     <string name="nav1">프로필 변경</string>
     <string name="nav2">설정</string>
     <string name="nav3">로그아웃</string>
+    <string name="write">게시하기</string>
+    <string name="title">제목</string>
+    <string name="content">내용</string>
 </resources>
